        * Debian/Dpkg/Copyright: removed restrictions on copyright format
        * dist.ini: added build dependency on Probe::Perl (to run tests that invoke config-edit)

2010-11-22 Dominique Dumont  <domi.dumont@free.fr> 1.222

	* bash-completion: fixed missing application option
	* Fstab model: specify '/etc' dir inst

2010-11-21 Dominique Dumont  <domi.dumont@free.fr> 1.221

        * Annotation: can now save annotation for node and list objects
        * Added new Fstab model and backend. Supports ext2 to ext4 and
	other file systems.  Please contact the author if options are
	missing.
        * Fix pod spelling errors (RT #62947). Thanks to carnil for the
	report and patches.
        * added config-edit test (build requires Test::Command)
        * config-edit: added -application option, added -list
  	model|applications option
	* Model.pm: updated doc
	* bash_completion.config-edit: is now *not* executable

2010-11-10 Dominique Dumont  <domi.dumont@free.fr> 1.220

	* Fix Build.PL to install files found in lib/Config/Model/*.d
	* Added Cookbook::CreateModelFromDoc from SF wiki

2010-11-09 Dominique Dumont  <domi.dumont@free.fr> 1.219

        * config-edit: fixed syntax error
        * replaced command lines generated from template by bash-autocompletion.
        * Removed dependency on Text::Template
        * Added Config::Model::Manual::ModelCreationIntroduction doc from SF wiki

2010-11-05 Dominique Dumont  <domi.dumont@free.fr> 1.218

        * Moved doc from README into model.pm
	* Copyright: added deprecated parameters (Upstream-Name
	  Upstream-Maintainer Upstream-Source). Added migrate_from
	  instruction to migrate user data from old parameters to new
	  parameters.
	* Copyright: Removed fuzziness around trailing '+' in licence names
	* AnyThing.pm: grab() : accept '+' without surrounding quotes in argument
	* WarpedNode: delegates copy_from and dump_tree to Node (fixes hash 
	  copy with warped nodes)
	* config-edit: added -open_item option